# Keylink-Studio

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_EN.md  build-release.ps1  create-icons.ps1  dev.ps1
crates/rawhid-host-cli/: Cargo.toml
crates/rawhid-host-cli/src/: main.rs
crates/rawhid-host-core/: Cargo.toml
crates/rawhid-host-core/src/: active_app.rs  ai_usage.rs  app_match.rs  config.rs  hid.rs  lib.rs  packet.rs  runner.rs  stats.rs  studio.rs  time.rs
crates/rawhid-host-tauri/: Cargo.toml  tauri.conf.json
crates/rawhid-host-tauri/capabilities/: default.json
crates/rawhid-host-tauri/icons/: icon.icns
crates/rawhid-host-tauri/src/: actions.rs  app_launch.rs  commands.rs  explorer.rs  foreground.rs  icon.rs  lib.rs  main.rs  startup.rs  state.rs
docs/: codex-broker-gate-results.md  codex-gate-a-results.md  combo-editing-spec.md  compatibility.md  host-link-rehandshake-gate-b.md  hostlink-config-rpc-packet-spec.md  keylink-studio-codex-screenkey-prototype-spec-reviewed-v10.md  keymap-encoder-editing-plan.md  manual-app-usage.md  manual-setup.md  output-keymap.md  packet-spec.md  spec.md  technology-overview.md
examples/: keylink-studio.toml  rawhid-host.toml
release/: notes-v1.0.1.md  notes-v1.1.0.md  notes-v1.1.1.md
tools/codex-broker-gate/: README.md  broker.mjs  fake-app-server.mjs  fake-cli.mjs  fake-codex.ps1  launch-cli.ps1  run-broker-gate.ps1  start-app-server.ps1  test-broker.mjs  test-broker.ps1  test-runner.ps1  ws-lite.mjs
tools/codex-gate-a/: README.md  gate-a-common.ps1  launch-cli.ps1  log-lock-self-test.ps1  mcp-elicitation-server.mjs  observer-self-test-server.mjs  observer.ps1  process-tree-self-test.ps1  run-gate-a.ps1  start-app-server.ps1  test-gate-a.ps1
tools/host-link-gate-b/: README.md  build-gate-b.sh  firmware-model-test.c  gate-b.conf  test-firmware-model.sh
ui/: index.html  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  api.ts  i18n.tsx  index.css  main.tsx  types.ts
ui/src/components/: KeymapCanvas.tsx  LayerBadge.tsx  RollingNumber.tsx  Sidebar.tsx  Toggle.tsx  Ui.tsx
ui/src/hooks/: useConfigSection.ts  useRollingNumber.ts
ui/src/lib/: battery.ts  deviceCards.ts  errors.ts  format.ts  theme.ts
ui/src/pages/: Actions.tsx  AiUsage.tsx  Dashboard.tsx  Devices.tsx  KeymapViewer.tsx  Rules.tsx  Settings.tsx  TimeSync.tsx
