[workspace]
members = [
    "crates/rawhid-host-core",
    "crates/rawhid-host-cli",
    "crates/rawhid-host-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
directories = "5.0.1"
hidapi = "2.6.3"
serde = { version = "1.0.217", features = ["derive"] }
tempfile = "3.14.0"
thiserror = "2.0.9"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
