[workspace]
members = [
    "crates/rawhid-host-core",
    "crates/rawhid-host-cli",
    "crates/rawhid-host-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hrmt-lab/Keylink-Studio"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock", "std"] }
directories = "5.0.1"
hidapi = "2.6.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tempfile = "3.14.0"
thiserror = "2.0.9"
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Variant",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
