[package]
name = "rawhid-host-core"
version = "0.3.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
directories.workspace = true
hidapi.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
reqwest.workspace = true
zmk-studio-api = { version = "0.3.1", default-features = false, features = ["serial"] }
serialport = "4.9.0"

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
