[package]
name = "rawhid-host-tauri"
version = "0.9.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "rawhid_host_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
rawhid-host-core = { path = "../rawhid-host-core" }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
